# VuforiaUvcCamera

./: README.md
licenses/: license_3rdpartynotice.txt
samples/UVCDriver/: CMakeLists.txt  README.md  build.py  q!
samples/UVCDriver/cmake/: android.toolchain.armeabi-v7a.cmake  android.toolchain.cmake  android.toolchain.x86.cmake
samples/UVCDriver/include/: UVCDriver.h  UVCExternalCamera.h
samples/UVCDriver/src/: UVCDriver.cpp  UVCExternalCamera.cpp
samples/UVCDriver/src/Assets/: ExternalCameraCalibration.xml
samples/UVCDriver/src/Java/com/vuforia/samples/uvcDriver/: CalibrationController.java  USBController.java
samples/VuforiaSamples-7-5-26/: build.gradle  local.properties
samples/VuforiaSamples-7-5-26/app/: build.gradle
samples/VuforiaSamples-7-5-26/app/src/main/: AndroidManifest.xml
samples/VuforiaSamples-7-5-26/app/src/main/assets/: astronaut.v3d  drone.v3d
samples/VuforiaSamples-7-5-26/app/src/main/assets/CloudReco/: CR_about.html
samples/VuforiaSamples-7-5-26/app/src/main/assets/CylinderTargets/: CY_about.html
samples/VuforiaSamples-7-5-26/app/src/main/assets/GroundPlane/: GP_about.html  chair.v3d
samples/VuforiaSamples-7-5-26/app/src/main/assets/ImageTargets/: IT_about.html
samples/VuforiaSamples-7-5-26/app/src/main/assets/ModelTargets/: MD_about.html  VuforiaMars_ModelTarget.xml
samples/VuforiaSamples-7-5-26/app/src/main/assets/MultiTargets/: MT_about.html
samples/VuforiaSamples-7-5-26/app/src/main/assets/ObjectRecognition/: OR_about.html
samples/VuforiaSamples-7-5-26/app/src/main/assets/UserDefinedTargets/: UD_about.html
samples/VuforiaSamples-7-5-26/app/src/main/assets/VirtualButtons/: VB_about.html
samples/VuforiaSamples-7-5-26/app/src/main/assets/VuMark/: VM_about.html
samples/VuforiaSamples-7-5-26/app/src/main/java/com/vuforia/SampleApplication/: SampleAppRenderer.java  SampleAppRendererControl.java  SampleApplicationControl.java  SampleApplicationException.java  SampleApplicationSession.java
samples/VuforiaSamples-7-5-26/app/src/main/java/com/vuforia/SampleApplication/utils/: CubeObject.java  CubeShaders.java  DiffuseLightMaterials.java  LightingShaders.java  LineShaders.java  LoadingDialogHandler.java  MeshObject.java  Plane.java  SampleApplication3DModel.java  SampleApplicationGLView.java  SampleApplicationV3DModel.java  SampleGestureListener.java  SampleMath.java  SampleUtils.java  Teapot.java  Texture.java  TouchEvent.java  VideoBackgroundShader.java
samples/VuforiaSamples-7-5-26/app/src/main/java/com/vuforia/VuforiaSamples/app/CloudRecognition/: CloudReco.java  CloudRecoRenderer.java
samples/VuforiaSamples-7-5-26/app/src/main/java/com/vuforia/VuforiaSamples/app/CylinderTargets/: CylinderModel.java  CylinderTargetRenderer.java  CylinderTargets.java
samples/VuforiaSamples-7-5-26/app/src/main/java/com/vuforia/VuforiaSamples/app/GroundPlane/: GroundPlane.java  GroundPlaneRenderer.java  TextureColorShaders.java
samples/VuforiaSamples-7-5-26/app/src/main/java/com/vuforia/VuforiaSamples/ui/: SampleAppToast.java
samples/VuforiaSamples-7-5-26/app/src/main/java/com/vuforia/samples/uvcDriver/: CalibrationController.java  USBController.java
samples/VuforiaSamples-7-5-26/app/src/main/res/drawable/: sample_app_toast_background.xml  selector_btn_astro.xml  selector_btn_drone.xml  selector_btn_product.xml  selector_btn_reset.xml
samples/VuforiaSamples-7-5-26/app/src/main/res/layout/: about_screen.xml  activities_list.xml  activities_list_text_view.xml  camera_overlay_ground_plane.xml  camera_overlay_model_targets.xml  camera_overlay_reticle.xml  camera_overlay_udt.xml  camera_overlay_with_scanline.xml  card.xml  sample_app_menu_group.xml  sample_app_menu_group_radio_button.xml  sample_app_menu_layer.xml  sample_app_toast_view.xml
samples/VuforiaSamples-7-5-26/app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  strings_content_description.xml  styles.xml
(+27 files in other folders)
